--- a/src/styles.css
+++ b/src/styles.css
@@ -51,3 +51,12 @@ div.result>div>span{
   font-weight: 100;
   margin-left: 20px;
 }
+div.result>div>span.tempUnit{
+  margin-left: 10px;
+  padding: 3px 10px;
+  font-size: 20px;
+  border-radius: 10px;
+  font-family: 'Courier New', Courier, monospace;
+  background-color:  #b0d8f384 ;
+  cursor: pointer;
+}
