--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,7 @@ input#searchBox{
 }
 .searchBtn{
   font-size: 25px;
+  cursor: pointer;
   padding: 3px 10px;
   border-radius: 7px;
   background-color:#258bcfdb;
